<resources>
    <string name="app_name">Initially</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="next_turn_">Next turn</string>
    <string name="welcome">Welcome to Initially, the game!  This is network-only, so you&amp;apos;ll need to log in to play!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_mesage_">Welcome to Initially! Please Log In</string>
    <string name="final_score_message">Match Recap</string>
    <string name="check_games">Check games</string>
    <string name="view_leaders">View Leaderboard</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_failure">Unable to sign in. Check your internet connection and try again later.</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="leaderboard_number_of_wins">CgkI3OXy-dYcEAIQAg</string>
</resources>
